removed timeframes from experience page

--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
                             <div class="expInfo">
                                 <div class="expTitleContainer">
                                     <h4>Nanotronics Imaging</h4>
-                                    <p>Internship, Winter-Summer 2013</p>
-                                    <img src="assets/nano_logo.png" width="70px"/>
+                                    <img class="expLogo" src="assets/nano_logo.png" style="margin-top: 20px;"/>
                                 </div>  
                                 <div class="expDescContainer">
                                     <p>Designed and developed desktop application to control automated silicon wafer inspection system.</p>
@@ -92,8 +91,7 @@
                             <div class="expInfo">
                                 <div class="expTitleContainer">
                                     <h4>STERIS Corporation</h4>
-                                    <p>Internship, 2014-2015</p>
-                                    <img src="assets/steris_logo.png" width="70px"/>
+                                    <img class="expLogo" src="assets/steris_logo.png"/>
                                 </div>  
                                 <div class="expDescContainer">
                                     <p>Worked to create a brand new type of surgical lighting system.  Worked with both hardware and softwware.</p>
@@ -107,8 +105,7 @@
                             <div class="expInfo">
                                 <div class="expTitleContainer">
                                     <h4>SapientRazorfish</h4>
-                                    <p>Software Engineer, 2015-Present</p>
-                                    <img src="assets/sapientrazorfish_logo.png" width="70px"/>
+                                    <img class="expLogo" src="assets/sapientrazorfish_logo.png"/>
                                 </div>  
                                 <div class="expDescContainer">
                                     <p>Design, implement, and maintain large-scale e-commerce sites using Websphere Commerce.</p>
