updated twitter link

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="footer">
             <div class="footerLinkContainer">
                 <a class="footerLink" href="https://www.facebook.com/jakedemian" target="_blank"><i class="fa fa-facebook fa-lg"></i></a>
-                <a class="footerLink" href="https://twitter.com/jakedemian" target="_blank"><i class="fa fa-twitter fa-lg"></i></a>
+                <a class="footerLink" href="https://twitter.com/sevenexie" target="_blank"><i class="fa fa-twitter fa-lg"></i></a>
                 <a class="footerLink" href="https://www.linkedin.com/in/jacob-demian-5a96799a/" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a>
                 <a class="footerLink" href="https://github.com/jakedemian" target="_blank"><i class="fa fa-github fa-lg"></i></a>
             </div>
