--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h2>About</h2>
                     <div class="aboutMain">
                         <div class="aboutMainLeft">
-                            <p>Nice to meet you!  I'm a Software Engineer and Web Developer currently living in Boston, MA.</p>
+                            <p>Nice to meet you!  I'm a Software Engineer and Web Developer currently living in Cleveland, OH.</p>
                             <p>When I'm not busy programming at work, you'll likely find me programming at home. <br/> I create video 
                                 games, design embedded software systems, and create web and desktop applications for fun!</p>
                         </div>
