--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script type="text/javascript" src="js/main.js"></script>
     </head>
     <body ng-app="mainApp">
+        temp
         <div class="wrapper">
             <div class="mainContent">
                 <div class="left">
