--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>Jake Demian</title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/temp.css">
         <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         
@@ -15,7 +16,6 @@
         <script type="text/javascript" src="js/main.js"></script>
     </head>
     <body ng-app="mainApp">
-        temp
         <div class="wrapper">
             <div class="mainContent">
                 <div class="left">
