--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="js/ExperienceController.js"></script>
 
         <script type="text/javascript" src="js/main.js"></script>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
     </head>
     <body ng-app="mainApp">
         <div class="wrapper">
