--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 games, design embedded software systems, and create web and desktop applications for fun!</p>
                         </div>
                         <div class="aboutMainRight">
-                            <img class="aboutImg" src="assets/self_pic.jpg"/>
+                            <img class="aboutImg" src="assets/main-pic.jpg"/>
                         </div>
                     </div>
                     <div class="dividerContainer">
